Update CMake build system for consolidated Rust workspace
Centralize Rust/Cargo build orchestration in Core/GraphicsWgpu/CMakeLists
instead of duplicating it across CanvasWgpu and NativeWebGPU. The Cargo
build now produces a single static library linked by all downstream
targets. Android NDK toolchain integration added for cross-compilation.

Standards/practices adopted:
- Single ExternalProject_Add for Cargo, with platform-specific target
  triples for macOS/iOS/Android/Windows/Linux
- Gitignore entries for Rust build artifacts (target/, *.d, *.fingerprint)
- FetchContent for third-party dependencies (consistent with JsRuntimeHost
  pattern already used in the project)

Remaining gaps:
- Windows and Linux CMake paths are defined but not yet tested end-to-end
- No CMake presets file for reproducible configure commands
- CanvasWgpu CMakeLists is now a thin wrapper — could be further simplified
  once the polyfill stabilizes

--- a/Apps/Playground/Android/BabylonNative/CMakeLists.txt
+++ b/Apps/Playground/Android/BabylonNative/CMakeLists.txt
@@ -36,3 +36,16 @@ target_link_libraries(BabylonNativeJNI
 
 target_compile_definitions(BabylonNativeJNI
     PRIVATE BABYLON_NATIVE_PLAYGROUND_HAS_CANVAS=1)
+
+if(ENABLE_SANITIZERS AND DEFINED BABYLON_NATIVE_SANITIZER_FLAGS)
+    target_compile_options(BabylonNativeJNI
+        PRIVATE -fsanitize=${BABYLON_NATIVE_SANITIZER_FLAGS} -fno-omit-frame-pointer)
+    target_link_options(BabylonNativeJNI
+        PRIVATE -fsanitize=${BABYLON_NATIVE_SANITIZER_FLAGS})
+
+    if(ANDROID)
+        # JNI dispatch can fault under ASAN on tagged-pointer ART internals (API 31 emulator).
+        # Keep ASAN on backend libraries and turn it off for this JNI entrypoint shim.
+        target_compile_options(BabylonNativeJNI PRIVATE -fno-sanitize=address)
+    endif()
+endif()
