--- a/Core/GraphicsWgpu/CMakeLists.txt
+++ b/Core/GraphicsWgpu/CMakeLists.txt
@@ -8,7 +8,13 @@ set(SOURCES
     "Source/WgpuNative.h"
     "InternalInclude/Babylon/Graphics/continuation_scheduler.h"
     "InternalInclude/Babylon/Graphics/DeviceContext.h"
+    "InternalInclude/Babylon/Graphics/WgpuInterop.h"
     "InternalInclude/Babylon/Graphics/SafeTimespanGuarantor.h")
+
+# GraphicsWgpu owns native render backend lifetime (surface/device/render loop)
+# and exports the shared Rust ABI target `babylon_graphics_backend`.
+# NativeWebGPU and CanvasWgpu both link this same target so the binary carries
+# one wgpu-backed runtime graph.
 
 set(CARGO_COMMAND)
 find_program(CARGO_EXECUTABLE cargo)
@@ -72,22 +78,38 @@ endif()
 set(RUST_CRATE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/Rust")
 set(RUST_TARGET_DIR "${CMAKE_BINARY_DIR}/cargo")
 get_filename_component(BABYLON_NATIVE_REPO_ROOT "${CMAKE_CURRENT_LIST_DIR}/../.." ABSOLUTE)
+get_property(BABYLON_NATIVE_MULTI_CONFIG GLOBAL PROPERTY GENERATOR_IS_MULTI_CONFIG)
 set(RUST_PROFILE_DIR "debug")
 set(RUST_BUILD_FLAG "")
-set(RUST_FEATURE_FLAGS "")
 set(RUST_TARGET_TRIPLE "")
 set(RUST_TARGET_FLAG "")
 set(RUST_PLATFORM_ENV)
 set(RUST_COMMON_ENV "CARGO_NET_GIT_FETCH_WITH_CLI=true")
+set(RUST_PROFILE_ENV)
 
-if(CMAKE_BUILD_TYPE MATCHES "^[Rr]elease$")
+if(CMAKE_BUILD_TYPE MATCHES "^[Rr]el")
+    # Match Release, RelWithDebInfo, and RelMinSize to the Rust release profile.
     set(RUST_PROFILE_DIR "release")
     set(RUST_BUILD_FLAG "--release")
+    list(APPEND RUST_PROFILE_ENV
+        "CARGO_PROFILE_RELEASE_CODEGEN_UNITS=1")
 endif()
 
-if(BABYLON_NATIVE_WGPU_USE_UPSTREAM_NATIVE)
-    set(RUST_FEATURE_FLAGS "--features" "upstream_wgpu_native")
-endif()
+function(_babylon_rust_output_lib out_var target_dir target_triple profile lib_basename)
+    if(WIN32)
+        set(_filename "${lib_basename}.lib")
+    else()
+        set(_filename "lib${lib_basename}.a")
+    endif()
+
+    if(target_triple STREQUAL "")
+        set(_path "${target_dir}/${profile}/${_filename}")
+    else()
+        set(_path "${target_dir}/${target_triple}/${profile}/${_filename}")
+    endif()
+
+    set(${out_var} "${_path}" PARENT_SCOPE)
+endfunction()
 
 if(ANDROID)
     if(ANDROID_ABI STREQUAL "arm64-v8a")
@@ -99,9 +121,61 @@ if(ANDROID)
     elseif(ANDROID_ABI STREQUAL "x86_64")
         set(RUST_TARGET_TRIPLE "x86_64-linux-android")
     endif()
+
+    set(ANDROID_PLATFORM_LEVEL "")
+    if(DEFINED ANDROID_PLATFORM AND NOT ANDROID_PLATFORM STREQUAL "")
+        string(REGEX REPLACE "^android-" "" ANDROID_PLATFORM_LEVEL "${ANDROID_PLATFORM}")
+    endif()
+    if(ANDROID_PLATFORM_LEVEL STREQUAL "")
+        set(ANDROID_PLATFORM_LEVEL "24")
+    endif()
+
+    set(ANDROID_NDK_ROOT "${ANDROID_NDK}")
+    if(ANDROID_NDK_ROOT STREQUAL "" AND DEFINED CMAKE_ANDROID_NDK)
+        set(ANDROID_NDK_ROOT "${CMAKE_ANDROID_NDK}")
+    endif()
+
+    if(ANDROID_NDK_ROOT STREQUAL "")
+        message(FATAL_ERROR "Unable to resolve Android NDK root for Rust linker setup.")
+    endif()
+
+    if(CMAKE_HOST_SYSTEM_NAME STREQUAL "Darwin")
+        set(ANDROID_HOST_TAG "darwin-x86_64")
+    elseif(CMAKE_HOST_SYSTEM_NAME STREQUAL "Linux")
+        set(ANDROID_HOST_TAG "linux-x86_64")
+    elseif(CMAKE_HOST_SYSTEM_NAME STREQUAL "Windows")
+        set(ANDROID_HOST_TAG "windows-x86_64")
+    else()
+        message(FATAL_ERROR "Unsupported host system for Android Rust linker setup: ${CMAKE_HOST_SYSTEM_NAME}")
+    endif()
+
+    set(RUST_ANDROID_LINKER_TRIPLE "${RUST_TARGET_TRIPLE}")
+    if(RUST_TARGET_TRIPLE STREQUAL "armv7-linux-androideabi")
+        set(RUST_ANDROID_LINKER_TRIPLE "armv7a-linux-androideabi")
+    endif()
+
+    set(ANDROID_LLVM_BIN_DIR "${ANDROID_NDK_ROOT}/toolchains/llvm/prebuilt/${ANDROID_HOST_TAG}/bin")
+    set(RUST_ANDROID_LINKER "${ANDROID_LLVM_BIN_DIR}/${RUST_ANDROID_LINKER_TRIPLE}${ANDROID_PLATFORM_LEVEL}-clang")
+    if(NOT EXISTS "${RUST_ANDROID_LINKER}")
+        message(FATAL_ERROR "Unable to locate Android Rust linker: ${RUST_ANDROID_LINKER}")
+    endif()
+
+    string(TOUPPER "${RUST_TARGET_TRIPLE}" RUST_TARGET_TRIPLE_ENV)
+    string(REPLACE "-" "_" RUST_TARGET_TRIPLE_ENV "${RUST_TARGET_TRIPLE_ENV}")
+    list(APPEND RUST_PLATFORM_ENV
+        "CARGO_TARGET_${RUST_TARGET_TRIPLE_ENV}_LINKER=${RUST_ANDROID_LINKER}"
+        "CC_${RUST_TARGET_TRIPLE_ENV}=${RUST_ANDROID_LINKER}"
+        "AR_${RUST_TARGET_TRIPLE_ENV}=${ANDROID_LLVM_BIN_DIR}/llvm-ar")
 elseif(IOS)
+    set(BABYLON_IOS_SIMULATOR_BUILD OFF)
     if(PLATFORM MATCHES "SIMULATOR")
-        if(CMAKE_OSX_ARCHITECTURES MATCHES "arm64")
+        set(BABYLON_IOS_SIMULATOR_BUILD ON)
+    elseif(CMAKE_OSX_SYSROOT MATCHES "iphonesimulator")
+        set(BABYLON_IOS_SIMULATOR_BUILD ON)
+    endif()
+
+    if(BABYLON_IOS_SIMULATOR_BUILD)
+        if(PLATFORM MATCHES "SIMULATORARM64" OR CMAKE_OSX_ARCHITECTURES MATCHES "(^|;)arm64(;|$)")
             set(RUST_TARGET_TRIPLE "aarch64-apple-ios-sim")
         else()
             set(RUST_TARGET_TRIPLE "x86_64-apple-ios")
@@ -116,7 +190,14 @@ elseif(IOS)
             "RUSTFLAGS=-C link-arg=-miphoneos-version-min=${DEPLOYMENT_TARGET}")
     endif()
 elseif(VISIONOS)
+    set(BABYLON_VISIONOS_SIMULATOR_BUILD OFF)
     if(PLATFORM MATCHES "SIMULATOR")
+        set(BABYLON_VISIONOS_SIMULATOR_BUILD ON)
+    elseif(CMAKE_OSX_SYSROOT MATCHES "xrsimulator")
+        set(BABYLON_VISIONOS_SIMULATOR_BUILD ON)
+    endif()
+
+    if(BABYLON_VISIONOS_SIMULATOR_BUILD)
         set(RUST_TARGET_TRIPLE "aarch64-apple-xros-sim")
     else()
         set(RUST_TARGET_TRIPLE "aarch64-apple-xros")
@@ -133,27 +214,36 @@ if(NOT RUST_TARGET_TRIPLE STREQUAL "")
     set(RUST_TARGET_FLAG "--target" "${RUST_TARGET_TRIPLE}")
 endif()
 
-if(WIN32)
-    if(RUST_TARGET_TRIPLE STREQUAL "")
-        set(RUST_OUTPUT_LIB "${RUST_TARGET_DIR}/${RUST_PROFILE_DIR}/babylon_graphics_backend.lib")
-    else()
-        set(RUST_OUTPUT_LIB "${RUST_TARGET_DIR}/${RUST_TARGET_TRIPLE}/${RUST_PROFILE_DIR}/babylon_graphics_backend.lib")
-    endif()
+_babylon_rust_output_lib(RUST_OUTPUT_LIB_DEBUG "${RUST_TARGET_DIR}" "${RUST_TARGET_TRIPLE}" "debug" "babylon_graphics_backend")
+_babylon_rust_output_lib(RUST_OUTPUT_LIB_RELEASE "${RUST_TARGET_DIR}" "${RUST_TARGET_TRIPLE}" "release" "babylon_graphics_backend")
+
+if(BABYLON_NATIVE_MULTI_CONFIG)
+    set(RUST_OUTPUT_LIBS
+        "${RUST_OUTPUT_LIB_DEBUG}"
+        "${RUST_OUTPUT_LIB_RELEASE}")
 else()
-    if(RUST_TARGET_TRIPLE STREQUAL "")
-        set(RUST_OUTPUT_LIB "${RUST_TARGET_DIR}/${RUST_PROFILE_DIR}/libbabylon_graphics_backend.a")
+    if(RUST_PROFILE_DIR STREQUAL "release")
+        set(RUST_OUTPUT_LIB "${RUST_OUTPUT_LIB_RELEASE}")
     else()
-        set(RUST_OUTPUT_LIB "${RUST_TARGET_DIR}/${RUST_TARGET_TRIPLE}/${RUST_PROFILE_DIR}/libbabylon_graphics_backend.a")
+        set(RUST_OUTPUT_LIB "${RUST_OUTPUT_LIB_DEBUG}")
     endif()
+    set(RUST_OUTPUT_LIBS "${RUST_OUTPUT_LIB}")
 endif()
 
 set(UPSTREAM_WGPU_NATIVE_TARGET "")
 set(UPSTREAM_WGPU_NATIVE_OUTPUT_LIB "")
+set(UPSTREAM_WGPU_NATIVE_OUTPUT_LIB_DEBUG "")
+set(UPSTREAM_WGPU_NATIVE_OUTPUT_LIB_RELEASE "")
 set(UPSTREAM_WGPU_NATIVE_LIB_DIR "")
+set(UPSTREAM_WGPU_NATIVE_LIB_DIR_DEBUG "")
+set(UPSTREAM_WGPU_NATIVE_LIB_DIR_RELEASE "")
 
 if(BABYLON_NATIVE_WGPU_USE_UPSTREAM_NATIVE)
     if(NOT DEFINED wgpu_native_SOURCE_DIR OR wgpu_native_SOURCE_DIR STREQUAL "")
         message(FATAL_ERROR "BABYLON_NATIVE_WGPU_USE_UPSTREAM_NATIVE requires wgpu_native_SOURCE_DIR.")
+    endif()
+    if(NOT DEFINED webgpu_headers_SOURCE_DIR OR webgpu_headers_SOURCE_DIR STREQUAL "")
+        message(FATAL_ERROR "BABYLON_NATIVE_WGPU_USE_UPSTREAM_NATIVE requires webgpu_headers_SOURCE_DIR.")
     endif()
 
     set(UPSTREAM_WGPU_NATIVE_TARGET_DIR "${RUST_TARGET_DIR}/upstream-wgpu-native")
@@ -168,63 +258,126 @@ if(BABYLON_NATIVE_WGPU_USE_UPSTREAM_NATIVE)
     endif()
     string(JOIN "," UPSTREAM_WGPU_NATIVE_FEATURES_ARG ${UPSTREAM_WGPU_NATIVE_FEATURES})
 
-    if(WIN32)
-        if(RUST_TARGET_TRIPLE STREQUAL "")
-            set(UPSTREAM_WGPU_NATIVE_OUTPUT_LIB "${UPSTREAM_WGPU_NATIVE_TARGET_DIR}/${RUST_PROFILE_DIR}/wgpu_native.lib")
-        else()
-            set(UPSTREAM_WGPU_NATIVE_OUTPUT_LIB "${UPSTREAM_WGPU_NATIVE_TARGET_DIR}/${RUST_TARGET_TRIPLE}/${RUST_PROFILE_DIR}/wgpu_native.lib")
-        endif()
+    _babylon_rust_output_lib(UPSTREAM_WGPU_NATIVE_OUTPUT_LIB_DEBUG "${UPSTREAM_WGPU_NATIVE_TARGET_DIR}" "${RUST_TARGET_TRIPLE}" "debug" "wgpu_native")
+    _babylon_rust_output_lib(UPSTREAM_WGPU_NATIVE_OUTPUT_LIB_RELEASE "${UPSTREAM_WGPU_NATIVE_TARGET_DIR}" "${RUST_TARGET_TRIPLE}" "release" "wgpu_native")
+    get_filename_component(UPSTREAM_WGPU_NATIVE_LIB_DIR_DEBUG "${UPSTREAM_WGPU_NATIVE_OUTPUT_LIB_DEBUG}" DIRECTORY)
+    get_filename_component(UPSTREAM_WGPU_NATIVE_LIB_DIR_RELEASE "${UPSTREAM_WGPU_NATIVE_OUTPUT_LIB_RELEASE}" DIRECTORY)
+
+    if(BABYLON_NATIVE_MULTI_CONFIG)
+        add_custom_command(
+            OUTPUT
+                "${UPSTREAM_WGPU_NATIVE_OUTPUT_LIB_DEBUG}"
+                "${UPSTREAM_WGPU_NATIVE_OUTPUT_LIB_RELEASE}"
+            COMMAND ${CMAKE_COMMAND} -E env ${RUST_COMMON_ENV} ${RUST_PLATFORM_ENV} ${CARGO_COMMAND} rustc --manifest-path "${wgpu_native_SOURCE_DIR}/Cargo.toml" --target-dir "${UPSTREAM_WGPU_NATIVE_TARGET_DIR}" ${RUST_TARGET_FLAG} --no-default-features --features "${UPSTREAM_WGPU_NATIVE_FEATURES_ARG}" --lib -- --crate-type staticlib
+            COMMAND ${CMAKE_COMMAND} -E env ${RUST_COMMON_ENV} ${RUST_PLATFORM_ENV} CARGO_PROFILE_RELEASE_CODEGEN_UNITS=1 ${CARGO_COMMAND} rustc --manifest-path "${wgpu_native_SOURCE_DIR}/Cargo.toml" --target-dir "${UPSTREAM_WGPU_NATIVE_TARGET_DIR}" --release ${RUST_TARGET_FLAG} --no-default-features --features "${UPSTREAM_WGPU_NATIVE_FEATURES_ARG}" --lib -- --crate-type staticlib
+            WORKING_DIRECTORY "${wgpu_native_SOURCE_DIR}"
+            DEPENDS
+                "${wgpu_native_SOURCE_DIR}/Cargo.toml"
+                "${wgpu_native_SOURCE_DIR}/src/lib.rs"
+                "${wgpu_native_SOURCE_DIR}/src/logging.rs"
+            COMMENT "Building upstream wgpu-native static library (debug + release)"
+            VERBATIM)
+        set(UPSTREAM_WGPU_NATIVE_OUTPUT_LIBS
+            "${UPSTREAM_WGPU_NATIVE_OUTPUT_LIB_DEBUG}"
+            "${UPSTREAM_WGPU_NATIVE_OUTPUT_LIB_RELEASE}")
     else()
-        if(RUST_TARGET_TRIPLE STREQUAL "")
-            set(UPSTREAM_WGPU_NATIVE_OUTPUT_LIB "${UPSTREAM_WGPU_NATIVE_TARGET_DIR}/${RUST_PROFILE_DIR}/libwgpu_native.a")
+        if(RUST_PROFILE_DIR STREQUAL "release")
+            set(UPSTREAM_WGPU_NATIVE_OUTPUT_LIB "${UPSTREAM_WGPU_NATIVE_OUTPUT_LIB_RELEASE}")
+            set(UPSTREAM_WGPU_NATIVE_LIB_DIR "${UPSTREAM_WGPU_NATIVE_LIB_DIR_RELEASE}")
         else()
-            set(UPSTREAM_WGPU_NATIVE_OUTPUT_LIB "${UPSTREAM_WGPU_NATIVE_TARGET_DIR}/${RUST_TARGET_TRIPLE}/${RUST_PROFILE_DIR}/libwgpu_native.a")
+            set(UPSTREAM_WGPU_NATIVE_OUTPUT_LIB "${UPSTREAM_WGPU_NATIVE_OUTPUT_LIB_DEBUG}")
+            set(UPSTREAM_WGPU_NATIVE_LIB_DIR "${UPSTREAM_WGPU_NATIVE_LIB_DIR_DEBUG}")
         endif()
+
+        add_custom_command(
+            OUTPUT "${UPSTREAM_WGPU_NATIVE_OUTPUT_LIB}"
+            COMMAND ${CMAKE_COMMAND} -E env ${RUST_COMMON_ENV} ${RUST_PLATFORM_ENV} ${RUST_PROFILE_ENV} ${CARGO_COMMAND} rustc --manifest-path "${wgpu_native_SOURCE_DIR}/Cargo.toml" --target-dir "${UPSTREAM_WGPU_NATIVE_TARGET_DIR}" ${RUST_BUILD_FLAG} ${RUST_TARGET_FLAG} --no-default-features --features "${UPSTREAM_WGPU_NATIVE_FEATURES_ARG}" --lib -- --crate-type staticlib
+            WORKING_DIRECTORY "${wgpu_native_SOURCE_DIR}"
+            DEPENDS
+                "${wgpu_native_SOURCE_DIR}/Cargo.toml"
+                "${wgpu_native_SOURCE_DIR}/src/lib.rs"
+                "${wgpu_native_SOURCE_DIR}/src/logging.rs"
+            COMMENT "Building upstream wgpu-native static library"
+            VERBATIM)
+        set(UPSTREAM_WGPU_NATIVE_OUTPUT_LIBS "${UPSTREAM_WGPU_NATIVE_OUTPUT_LIB}")
     endif()
 
-    get_filename_component(UPSTREAM_WGPU_NATIVE_LIB_DIR "${UPSTREAM_WGPU_NATIVE_OUTPUT_LIB}" DIRECTORY)
+    set(UPSTREAM_WGPU_NATIVE_TARGET wgpu_native_upstream_backend_rust)
+    add_custom_target(${UPSTREAM_WGPU_NATIVE_TARGET} DEPENDS ${UPSTREAM_WGPU_NATIVE_OUTPUT_LIBS})
+endif()
+
+if(BABYLON_NATIVE_MULTI_CONFIG)
+    set(RUST_BACKEND_ENV_DEBUG ${RUST_COMMON_ENV} ${RUST_PLATFORM_ENV})
+    set(RUST_BACKEND_ENV_RELEASE ${RUST_COMMON_ENV} ${RUST_PLATFORM_ENV} "CARGO_PROFILE_RELEASE_CODEGEN_UNITS=1")
+    if(BABYLON_NATIVE_WGPU_USE_UPSTREAM_NATIVE)
+        list(APPEND RUST_BACKEND_ENV_DEBUG
+            "BABYLON_WGPU_NATIVE_LIB_DIR=${UPSTREAM_WGPU_NATIVE_LIB_DIR_DEBUG}"
+            "BABYLON_WGPU_NATIVE_LIB_NAME=wgpu_native"
+            "BABYLON_WGPU_NATIVE_FFI_DIR=${wgpu_native_SOURCE_DIR}/ffi"
+            "BABYLON_WEBGPU_HEADERS_DIR=${webgpu_headers_SOURCE_DIR}")
+        list(APPEND RUST_BACKEND_ENV_RELEASE
+            "BABYLON_WGPU_NATIVE_LIB_DIR=${UPSTREAM_WGPU_NATIVE_LIB_DIR_RELEASE}"
+            "BABYLON_WGPU_NATIVE_LIB_NAME=wgpu_native"
+            "BABYLON_WGPU_NATIVE_FFI_DIR=${wgpu_native_SOURCE_DIR}/ffi"
+            "BABYLON_WEBGPU_HEADERS_DIR=${webgpu_headers_SOURCE_DIR}")
+    endif()
 
     add_custom_command(
-        OUTPUT "${UPSTREAM_WGPU_NATIVE_OUTPUT_LIB}"
-        COMMAND ${CMAKE_COMMAND} -E env ${RUST_COMMON_ENV} ${RUST_PLATFORM_ENV} ${CARGO_COMMAND} build --manifest-path "${wgpu_native_SOURCE_DIR}/Cargo.toml" --target-dir "${UPSTREAM_WGPU_NATIVE_TARGET_DIR}" ${RUST_BUILD_FLAG} ${RUST_TARGET_FLAG} --no-default-features --features "${UPSTREAM_WGPU_NATIVE_FEATURES_ARG}"
-        WORKING_DIRECTORY "${wgpu_native_SOURCE_DIR}"
+        OUTPUT
+            "${RUST_OUTPUT_LIB_DEBUG}"
+            "${RUST_OUTPUT_LIB_RELEASE}"
+        COMMAND ${CMAKE_COMMAND} -E env ${RUST_BACKEND_ENV_DEBUG} ${CARGO_COMMAND} build --manifest-path "${RUST_CRATE_DIR}/Cargo.toml" --target-dir "${RUST_TARGET_DIR}" ${RUST_TARGET_FLAG}
+        COMMAND ${CMAKE_COMMAND} -E env ${RUST_BACKEND_ENV_RELEASE} ${CARGO_COMMAND} build --manifest-path "${RUST_CRATE_DIR}/Cargo.toml" --target-dir "${RUST_TARGET_DIR}" --release ${RUST_TARGET_FLAG}
+        WORKING_DIRECTORY "${RUST_CRATE_DIR}"
         DEPENDS
-            "${wgpu_native_SOURCE_DIR}/Cargo.toml"
-            "${wgpu_native_SOURCE_DIR}/src/lib.rs"
-            "${wgpu_native_SOURCE_DIR}/src/logging.rs"
-        COMMENT "Building upstream wgpu-native static library"
+            "${BABYLON_NATIVE_REPO_ROOT}/Cargo.toml"
+            "${BABYLON_NATIVE_REPO_ROOT}/Cargo.lock"
+            "${RUST_CRATE_DIR}/Cargo.toml"
+            "${RUST_CRATE_DIR}/build.rs"
+            "${RUST_CRATE_DIR}/src/lib.rs"
+            "${BABYLON_NATIVE_REPO_ROOT}/Polyfills/CanvasWgpu/Rust/src/lib.rs"
+        COMMENT "Building Rust WebGPU backend (debug + release)"
         VERBATIM)
+else()
+    set(RUST_BACKEND_ENV ${RUST_COMMON_ENV} ${RUST_PLATFORM_ENV} ${RUST_PROFILE_ENV})
+    if(BABYLON_NATIVE_WGPU_USE_UPSTREAM_NATIVE)
+        list(APPEND RUST_BACKEND_ENV
+            "BABYLON_WGPU_NATIVE_LIB_DIR=${UPSTREAM_WGPU_NATIVE_LIB_DIR}"
+            "BABYLON_WGPU_NATIVE_LIB_NAME=wgpu_native"
+            "BABYLON_WGPU_NATIVE_FFI_DIR=${wgpu_native_SOURCE_DIR}/ffi"
+            "BABYLON_WEBGPU_HEADERS_DIR=${webgpu_headers_SOURCE_DIR}")
+    endif()
 
-    set(UPSTREAM_WGPU_NATIVE_TARGET wgpu_native_upstream_backend_rust)
-    add_custom_target(${UPSTREAM_WGPU_NATIVE_TARGET} DEPENDS "${UPSTREAM_WGPU_NATIVE_OUTPUT_LIB}")
+    add_custom_command(
+        OUTPUT "${RUST_OUTPUT_LIB}"
+        COMMAND ${CMAKE_COMMAND} -E env ${RUST_BACKEND_ENV} ${CARGO_COMMAND} build --manifest-path "${RUST_CRATE_DIR}/Cargo.toml" --target-dir "${RUST_TARGET_DIR}" ${RUST_BUILD_FLAG} ${RUST_TARGET_FLAG}
+        WORKING_DIRECTORY "${RUST_CRATE_DIR}"
+        DEPENDS
+            "${BABYLON_NATIVE_REPO_ROOT}/Cargo.toml"
+            "${BABYLON_NATIVE_REPO_ROOT}/Cargo.lock"
+            "${RUST_CRATE_DIR}/Cargo.toml"
+            "${RUST_CRATE_DIR}/build.rs"
+            "${RUST_CRATE_DIR}/src/lib.rs"
+            "${BABYLON_NATIVE_REPO_ROOT}/Polyfills/CanvasWgpu/Rust/src/lib.rs"
+        COMMENT "Building Rust WebGPU backend"
+        VERBATIM)
 endif()
 
-set(RUST_BACKEND_ENV ${RUST_COMMON_ENV} ${RUST_PLATFORM_ENV})
-if(BABYLON_NATIVE_WGPU_USE_UPSTREAM_NATIVE)
-    list(APPEND RUST_BACKEND_ENV
-        "BABYLON_WGPU_NATIVE_LIB_DIR=${UPSTREAM_WGPU_NATIVE_LIB_DIR}"
-        "BABYLON_WGPU_NATIVE_LIB_NAME=wgpu_native")
-endif()
-
-add_custom_command(
-    OUTPUT "${RUST_OUTPUT_LIB}"
-    COMMAND ${CMAKE_COMMAND} -E env ${RUST_BACKEND_ENV} ${CARGO_COMMAND} build --manifest-path "${RUST_CRATE_DIR}/Cargo.toml" --target-dir "${RUST_TARGET_DIR}" ${RUST_BUILD_FLAG} ${RUST_TARGET_FLAG} ${RUST_FEATURE_FLAGS}
-    WORKING_DIRECTORY "${RUST_CRATE_DIR}"
-    DEPENDS
-        "${BABYLON_NATIVE_REPO_ROOT}/Cargo.toml"
-        "${RUST_CRATE_DIR}/Cargo.toml"
-        "${RUST_CRATE_DIR}/build.rs"
-        "${RUST_CRATE_DIR}/src/lib.rs"
-    COMMENT "Building Rust WebGPU backend"
-    VERBATIM)
-
-add_custom_target(babylon_graphics_backend_rust DEPENDS "${RUST_OUTPUT_LIB}")
+add_custom_target(babylon_graphics_backend_rust DEPENDS ${RUST_OUTPUT_LIBS})
 if(UPSTREAM_WGPU_NATIVE_TARGET)
     add_dependencies(babylon_graphics_backend_rust ${UPSTREAM_WGPU_NATIVE_TARGET})
 endif()
 
 add_library(babylon_graphics_backend STATIC IMPORTED GLOBAL)
-set_target_properties(babylon_graphics_backend PROPERTIES IMPORTED_LOCATION "${RUST_OUTPUT_LIB}")
+if(BABYLON_NATIVE_MULTI_CONFIG)
+    set_target_properties(babylon_graphics_backend PROPERTIES
+        IMPORTED_LOCATION_DEBUG "${RUST_OUTPUT_LIB_DEBUG}"
+        IMPORTED_LOCATION_RELEASE "${RUST_OUTPUT_LIB_RELEASE}"
+        IMPORTED_LOCATION_RELWITHDEBINFO "${RUST_OUTPUT_LIB_RELEASE}"
+        IMPORTED_LOCATION_MINSIZEREL "${RUST_OUTPUT_LIB_RELEASE}")
+else()
+    set_target_properties(babylon_graphics_backend PROPERTIES IMPORTED_LOCATION "${RUST_OUTPUT_LIB}")
+endif()
 add_dependencies(babylon_graphics_backend babylon_graphics_backend_rust)
 
 add_library(Graphics ${SOURCES})
