--- a/Plugins/NativeWebGPU/CMakeLists.txt
+++ b/Plugins/NativeWebGPU/CMakeLists.txt
@@ -5,8 +5,11 @@ set(SOURCES
 add_library(NativeWebGPU STATIC ${SOURCES})
 warnings_as_errors(NativeWebGPU)
 
+# NativeWebGPU provides the JS-facing `navigator.gpu` object surface and routes
+# commands/interop helpers through the shared GraphicsWgpu Rust ABI.
 target_include_directories(NativeWebGPU
-    PUBLIC "Include")
+    PUBLIC "Include"
+    PRIVATE "${CMAKE_CURRENT_LIST_DIR}/../../Core/GraphicsWgpu/InternalInclude")
 
 target_link_libraries(NativeWebGPU
     PUBLIC napi
@@ -14,6 +17,14 @@ target_link_libraries(NativeWebGPU
 
 if(TARGET babylon_graphics_backend)
     target_link_libraries(NativeWebGPU PRIVATE babylon_graphics_backend)
+endif()
+
+if(BABYLON_NATIVE_ENABLE_WEBGPU_DEVELOPER_FEATURES)
+    target_compile_definitions(NativeWebGPU PRIVATE BABYLON_NATIVE_ENABLE_WEBGPU_DEVELOPER_FEATURES=1)
+endif()
+
+if(BABYLON_NATIVE_ENABLE_UNSAFE_WEBGPU)
+    target_compile_definitions(NativeWebGPU PRIVATE BABYLON_NATIVE_ENABLE_UNSAFE_WEBGPU=1)
 endif()
 
 set_property(TARGET NativeWebGPU PROPERTY FOLDER Plugins)
