Overhaul Playground scripts and platform bridges for WebGPU
Rewrite playground_runner.js to remove ~180 lines of dead polling code
(6 polling constants, 7 polling/waiting functions) that were unnecessary
given the AppRuntime FIFO WorkQueue initialization guarantee. Replace
with fail-fast assertions and direct signal consumption.

Expand webgpu_smoke.js into a comprehensive WebGPU validation scene:
rotating cube with per-face Canvas 2D text, compute shader dispatch,
queue.copyExternalImageToTexture, runtime telemetry counters, and font
loading via bundled RobotoSlab.ttf.

Platform bridge changes:
- Android: stale-globals clearing in onViewReady() for surface
  recreation safety; WebGPU bootstrap in BabylonNativeJNI
- iOS: WebGPU initialization in LibNativeBridge dispatch callback
- macOS: refresh button wired to re-run scripts with proper cleanup

Standards/practices adopted:
- Synchronous navigator.gpu access (no polling) matching W3C spec and
  the FIFO WorkQueue contract documented in AppContext.cpp
- Epoch-based reload safety for Android surface recreation and macOS
  refresh (prevents stale runtime cross-talk)
- Scene factory signal pattern for decoupled script loading order

Remaining gaps:
- webgpu_smoke.js is both a smoke test and the default scene — a
  separate minimal "hello triangle" would be better for CI validation
- No automated screenshot comparison; validation is visual-only
- Android Gradle files reference specific SDK/NDK versions that may
  need updating for newer toolchains
- validation_native.js is a stub — no actual validation framework yet

--- a/Apps/Playground/Android/BabylonNative/build.gradle
+++ b/Apps/Playground/Android/BabylonNative/build.gradle
@@ -40,7 +40,11 @@ android {
         }
         externalNativeBuild {
             cmake {
-                abiFilters "arm64-v8a", "armeabi-v7a", "x86", "x86_64"
+                if (project.hasProperty("ARM64Only")) {
+                    abiFilters "arm64-v8a"
+                } else {
+                    abiFilters "arm64-v8a", "armeabi-v7a", "x86", "x86_64"
+                }
                 arguments "-DANDROID_STL=c++_shared",
                     "-DENABLE_PCH=OFF",
                     "-DGRAPHICS_API=${graphics_api}",
@@ -49,15 +53,17 @@ android {
                     "-DBABYLON_NATIVE_BUILD_APPS=ON",
                     "-DBABYLON_NATIVE_POLYFILL_CANVAS=ON",
                     "-DBABYLON_NATIVE_POLYFILL_CANVAS_WGPU=ON",
-                    "-DCMAKE_UNITY_BUILD=${unity_build}",
-                    "-DBABYLON_DEBUG_TRACE=ON"
+                    "-DCMAKE_UNITY_BUILD=${unity_build}"
+                if (project.hasProperty("ENABLE_SANITIZERS")) {
+                    arguments "-DENABLE_SANITIZERS=${project.property("ENABLE_SANITIZERS")}"
+                }
             }
         }
         ndk {
             if (project.hasProperty("ARM64Only")) {
                 abiFilters "arm64-v8a"
             } else {
-                abiFilters "arm64-v8a", "armeabi-v7a", "x86"
+                abiFilters "arm64-v8a", "armeabi-v7a", "x86", "x86_64"
             }
         }
         packagingOptions {
@@ -79,9 +85,25 @@ android {
     }
 
     buildTypes {
+        debug {
+            externalNativeBuild {
+                cmake {
+                    arguments "-DBABYLON_DEBUG_TRACE=ON"
+                }
+            }
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            ndk {
+                debugSymbolLevel 'NONE'
+                abiFilters "arm64-v8a"
+            }
+            externalNativeBuild {
+                cmake {
+                    arguments "-DBABYLON_DEBUG_TRACE=OFF", "-DCMAKE_BUILD_TYPE=Release", "-DCMAKE_INTERPROCEDURAL_OPTIMIZATION=ON"
+                }
+            }
         }
     }
     compileOptions {
