--- a/.github/jobs/cmake.yml
+++ b/.github/jobs/cmake.yml
@@ -35,3 +35,21 @@ steps:
       choco install cmake --version=$(CMAKE_VERSION) -y --allow-downgrade
     condition: contains('${{parameters.vmImage}}', 'windows')
     displayName: "CMake version"
+
+  # Rust toolchain -- required by the wgpu backend build.
+  - script: |
+      curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain stable
+      echo "##vso[task.prependpath]$HOME/.cargo/bin"
+      rustc --version
+      cargo --version
+    condition: not(contains('${{parameters.vmImage}}', 'windows'))
+    displayName: "Install Rust toolchain (Unix)"
+
+  - powershell: |
+      Invoke-WebRequest -Uri https://win.rustup.rs/x86_64 -OutFile rustup-init.exe
+      .\rustup-init.exe -y --default-toolchain stable
+      echo "##vso[task.prependpath]$env:USERPROFILE\.cargo\bin"
+      rustc --version
+      cargo --version
+    condition: contains('${{parameters.vmImage}}', 'windows')
+    displayName: "Install Rust toolchain (Windows)"
